1.封装了编号的获取算法 2.重写了从外图添加明细时多用户同步添加造成的重复编号漏洞 3.修复了两张表的内图漏洞 4.添加了从内图创建明细并支持多用户同步添加 5.添加了从内图查看对应的图纸明细

--- a/application/index/view/blueprint/blueprint-info.html
+++ b/application/index/view/blueprint/blueprint-info.html
@@ -58,7 +58,7 @@
         <!--</th>-->
         <th>操作</th>
         <th>明细编号</th>
-        <th>公司编号</th>
+        <th>内图编号</th>
         <th>外图编号</th>
         <th>图纸名称</th>
         <th>材料</th>
