--- a/application/index/view/assembly/assembly-info.html
+++ b/application/index/view/assembly/assembly-info.html
@@ -55,7 +55,7 @@
               <a title="添加明细" onclick="x_admin_show('生成内图','{:url(\'index/Internal/internalAddAssembly\',[\'assembly_code\'=>$info.id])}',400,400)" href="javascript:;"><i style="color: green" class="iconfont nav_right">&#xe6b9;</i></a>
             </td>
             <td>
-              <a style="color: #0000cc" href="javascript:void(0);" onclick="x_admin_show('<span class=\'layui-badge layui-bg-blue\'>{$info.assembly_code}</span> 的内图','{:url(\'index/Internal/internalBelonged\',[\'assembly_code\'=>$info.assembly_code])}')">{$info.assembly_code}</a>
+              <a style="color: #0000cc" href="javascript:void(0);" onclick="x_admin_show('<span class=\'layui-badge layui-bg-blue\'>{$info.assembly_code}</span> 的内图','{:url(\'index/Internal/internalInfo\',[\'assembly_code\'=>$info.assembly_code,'sort'=>'desc'])}')">{$info.assembly_code}</a>
             </td>
             <td>{$info.looling_type_name}</td>
             <td>{$info.remark}</td>
