1.外图搜索  --  完成
2.内图搜索  --  完成

3.组件搜索  --  完成

4.明细增序  --  其他开发完成

5.组件增序  --   其他开发完成

6.组件无子项去掉跳转 --  完成

7.外图无子项去掉跳转 --  完成

8.统一行数25行 --  完成

9.图纸明细 -> 工艺 -> 添加 : 工艺类型改为模糊搜索 --  完成

10.图纸明细中材料要求改为备料要求 --  完成

11.显示数据数量和页数  --  完成

12.外图添加明细没有创建人  --  已修复

13.删除内图  --  需求未明确(无法确定需求是删除内图再删除对应的所有明细或者对应明细里面的内图字段信息)

备注:发现添加内图时内图界面无法显示所有内图，等待王恒兵修复

--- a/application/index/view/assembly/assembly-info.html
+++ b/application/index/view/assembly/assembly-info.html
@@ -13,7 +13,25 @@
       <xblock>
         <!--<button class="layui-btn layui-btn-danger" onclick="delAll()"><i class="layui-icon"></i>删除</button>-->
         <button class="layui-btn" onclick="x_admin_show('添加组件图纸','{:url(\'index/Assembly/assemblyAdd\')}',500,500)"><i class="layui-icon"></i>添加组件图纸</button>
-        <span class="x-right" style="line-height:40px">共有数据：{$assembluCount} 条</span>
+        <div class="layui-input-inline">
+          <form class="layui-form" action="{:url('index/Assembly/assemblyInfo')}" method="post">
+            <div class="layui-input-inline">
+              <input type="text" name="modules" autocomplete="off" placeholder="请输入关键字..." class="layui-input">
+            </div>
+            <div class="layui-input-inline">
+              <select name="id" lay-search="" >
+                <option value=""></option>
+                <optgroup label="组件编号">
+                  {volist name="assemblyInfo" id="assemblyInfoLest"}
+                  <option value="{$assemblyInfoLest.id}">{$assemblyInfoLest.assembly_code}</option>
+                  {/volist}
+                </optgroup>
+              </select>
+            </div>
+            <button type="submit" class="layui-btn"  lay-submit="" lay-filter="sreach"><i class="layui-icon">&#xe615;</i></button>
+          </form>
+        </div>
+        <span class="x-right" style="line-height:40px">共有{$assembluCount}条数据 · 有{$assembluCount/25|getInt}页</span>
       </xblock>
       <div class="container-wrap">
         <div class="box-1">
@@ -55,7 +73,14 @@
               <a title="添加明细" onclick="x_admin_show('生成内图','{:url(\'index/Internal/internalAddAssembly\',[\'assembly_code\'=>$info.id])}',400,400)" href="javascript:;"><i style="color: green" class="iconfont nav_right">&#xe6b9;</i></a>
             </td>
             <td>
+                <?php
+                    $count = getAssembly($info['assembly_code']);
+                ?>
+                {if $count == 0}
+                {$info.assembly_code}
+                {else/}
               <a style="color: #0000cc" href="javascript:void(0);" onclick="x_admin_show('<span class=\'layui-badge layui-bg-blue\'>{$info.assembly_code}</span> 的内图','{:url(\'index/Internal/internalInfo\',[\'assembly_code\'=>$info.assembly_code,'sort'=>'desc'])}')">{$info.assembly_code}</a>
+                {/if}
             </td>
             <td>{$info.looling_type_name}</td>
             <td>{$info.remark}</td>
