--- a/application/index/view/internal/add-drawing-detial.html
+++ b/application/index/view/internal/add-drawing-detial.html
@@ -174,7 +174,7 @@
             </div>
         </div>
         <div class="layui-form-item">
-            <label class="layui-form-label">材料要求</label>
+            <label class="layui-form-label">备料要求</label>
             <div class="layui-input-inline">
                 <input type="text" class="layui-input" value=" "  id="material_requirements">
             </div>
