--- a/application/index/view/blueprint/blueprint-infos.html
+++ b/application/index/view/blueprint/blueprint-infos.html
@@ -185,7 +185,7 @@
                 </div>
             </div>
             <div class="layui-form-item">
-                <label class="layui-form-label">材料要求</label>
+                <label class="layui-form-label">备料要求</label>
                 <div class="layui-input-inline">
                     <input type="text" class="layui-input" name="material_requirements" value="{$blueprintInfo.material_requirements}"  >
                 </div>
