--- a/application/index/view/internal/internal-info.html
+++ b/application/index/view/internal/internal-info.html
@@ -16,28 +16,15 @@
     <xblock>
         <!--<button class="layui-btn layui-btn-danger" onclick="delAll()"><i class="layui-icon"></i>批量删除</button>-->
         <button class="layui-btn" onclick="x_admin_show('添加内图','{:url(\'index/Internal/internalAdd\')}',400,400)"><i class="layui-icon"></i>添加</button>
-        &nbsp;&nbsp;&nbsp;&nbsp;
-        <!--<div class="layui-input-inline"><input type="tel" id="findText" lay-verify="required|phone" autocomplete="off" placeholder="请输入关键字..." class="layui-input"></div>-->
-        <!--<button class="layui-btn"  lay-submit="" lay-filter="sreach" id="find"><i class="layui-icon">&#xe615;</i></button>-->
-        <!--<script>-->
-            <!--$(function () {-->
-                <!--$("#find").click(function () {-->
-                    <!--var findText = $("#findText").val();-->
-                    <!--if(findText.length > 1){-->
-                        <!--window.location.href="{:url('index/blueprint/blueprintInfo')}";-->
-                    <!--}else{-->
-                        <!--layer.msg('请输入查找的关键字!',{icon:0,time:2000});-->
-                    <!--}-->
-
-                <!--});-->
-            <!--})-->
-        <!--</script>-->
         <div class="layui-input-inline">
             <!--<input type="tel" id="findText" lay-verify="required|phone" autocomplete="off" placeholder="请输入关键字..." class="layui-input">-->
             <form class="layui-form" action="{:url('index/Internal/internalInfo')}" method="post">
                 <div class="layui-input-inline">
+                    <input type="text" name="modules" autocomplete="off" placeholder="请输入关键字..." class="layui-input">
+                </div>
+                <div class="layui-input-inline">
                     <select name="id" lay-search="" >
-                        <option value="">请输入关键字</option>
+                        <option value=""></option>
                         <optgroup label="内图编号">
                             {volist name="$internalCode" id="InfoList"}
                             <option value="{$InfoList.id}">{$InfoList.drawing_Internal_id}</option>
@@ -48,6 +35,7 @@
                 <button type="submit" class="layui-btn"  lay-submit="" lay-filter="sreach"><i class="layui-icon">&#xe615;</i></button>
             </form>
         </div>
+        <span class="x-right" style="line-height:40px">共有{$countInternalInfo}条数据 · 有{$countInternalInfo/25|getInt}页</span>
         <script>
             $(function () {
                 $("input").click(function () {
