--- a/application/index/view/blueprint/not-files.html
+++ b/application/index/view/blueprint/not-files.html
@@ -44,7 +44,6 @@
             data:formFile,
             type: "post",
             dataType: "json",
-            cache: false,//上传文件无需缓存
             processData: false,//用于对data参数进行序列化处理 这里必须false
             contentType: false, //必须
             success:function (res) {
@@ -64,5 +63,8 @@
             }
         })
     }
+    $("#customFile").change(function () {
+        console.log($("#customFile"));
+    });
 </script>
 </html>
