--- a/application/index/view/blueprint/blueprint-infos.html
+++ b/application/index/view/blueprint/blueprint-infos.html
@@ -88,6 +88,13 @@
                 </div>
             </div>
 
+            <div >
+                <label class="layui-form-label">继承图纸文件</label>
+                <div class="layui-input-inline">
+                    <input type="checkbox" name="files_state" lay-skin="switch" lay-text="是|否"  id="files_state">
+                </div>
+            </div>  <!-- 是否继承外图图纸文件 -->
+
             <div id="fff">
                 <div class="layui-form-item">
                     <label class="layui-form-label">材料形状</label>
