外图继承按钮添加(无功能),外图图纸上传界面(无功能)

--- a/application/index/view/blueprint/blueprint-infos.html
+++ b/application/index/view/blueprint/blueprint-infos.html
@@ -88,13 +88,6 @@
                 </div>
             </div>
 
-            <div >
-                <label class="layui-form-label">继承图纸文件</label>
-                <div class="layui-input-inline">
-                    <input type="checkbox" name="files_state" lay-skin="switch" lay-text="是|否"  id="files_state">
-                </div>
-            </div>  <!-- 是否继承外图图纸文件 -->
-
             <div id="fff">
                 <div class="layui-form-item">
                     <label class="layui-form-label">材料形状</label>
@@ -272,6 +265,12 @@
                     <div class="layui-unselect layui-form-switch layui-form-onswitch" lay-skin="_switch"><em>ON</em><i></i></div>
                 </div>
             </div>
+            <div >
+                <label class="layui-form-label">继承图纸文件</label>
+                <div class="layui-input-inline">
+                    <input type="checkbox" name="files_state" lay-skin="switch" lay-text="是|否"  id="files_state">
+                </div>
+            </div>  <!-- 是否继承外图图纸文件 默认选中为是-->
             <div class="layui-form-item layui-form-text">
                 <label class="layui-form-label">备注</label>
                 <div class="layui-input-block">
