--- a/application/index/view/blueprint/drawing_files.html
+++ b/application/index/view/blueprint/drawing_files.html
@@ -25,7 +25,7 @@
         <p>选择新的{$key}文件:</p>
         <div class="custom-file mb-3">
             <input type="file" class="custom-file-input" id="customFile" name="filename">
-            <label class="custom-file-label" for="customFile">选择文件</label>
+            <label class="custom-file-label" for="customFile" id="customFile_log">选择文件</label>
         </div>
         <div class="mt-3">
             <button type="button" onclick="UpFiles()" class="btn btn-primary">更新</button>
@@ -63,5 +63,16 @@
             }
         })
     }
+    $("#customFile").change(function () {
+        $("#customFile_log").html($("#customFile")[0].files[0].name);
+        if(!/^[\S]+.pdf$/.test($("#customFile")[0].files[0].name))
+        {
+            layer.msg('请选择有效的图纸文件', {icon: 0,time: 2000},
+                function () {
+                    location.reload();
+                });
+            return;
+        }
+    });
 </script>
 </html>
