--- a/application/index/view/blueprint/blueprint-infos.html
+++ b/application/index/view/blueprint/blueprint-infos.html
@@ -268,7 +268,8 @@
             <div >
                 <label class="layui-form-label">继承图纸文件</label>
                 <div class="layui-input-inline">
-                    <input type="checkbox" name="files_state" lay-skin="switch" lay-text="是|否"  id="files_state">
+                    <input type="checkbox" {if  1==$blueprintInfo.files_state}checked=""{/if}  name="files_state" lay-skin="switch" lay-text="是|否"  id="files_state">
+                    <div class="layui-unselect layui-form-switch layui-form-onswitch" lay-skin="_switch"><em>ON</em><i></i></div>
                 </div>
             </div>  <!-- 是否继承外图图纸文件 默认选中为是-->
             <div class="layui-form-item layui-form-text">
