--- a/application/index/view/internal/add-drawing-detial.html
+++ b/application/index/view/internal/add-drawing-detial.html
@@ -225,7 +225,12 @@
             </div>
         </div>
         {/switch}
-
+        <div >
+            <label class="layui-form-label">继承图纸文件</label>
+            <div class="layui-input-inline">
+                <input type="checkbox" name="files_state" lay-skin="switch" lay-text="是|否"  id="files_state">
+            </div>
+        </div>  <!-- 是否继承外图图纸文件 默认选中为是-->
         <div class="layui-form-item layui-form-text">
             <label class="layui-form-label">备注</label>
             <div class="layui-input-block">
@@ -485,6 +490,8 @@
            var client_id = $("#client_id").val();
            var if_batch = $("#if_batch:checked").val();
             if_batch = if_batch==undefined?"0":"1";
+            var files_state = $("#files_state:checked").val();//是否继承图纸
+            files_state = files_state==undefined?"0":"1";
             var layout_qty = $("#layout_qty").val();
             var material_requirements = $("#material_requirements").val();
             var product_mfg_cost = $("#product_mfg_cost").val();
@@ -504,6 +511,7 @@
             materialSelectArray['drawing_type']=drawing_type;//图纸类型
             materialSelectArray['client_id']=client_id; //客户简称  /这里放进去用户ID
             materialSelectArray['if_batch']=if_batch;    //是否批量  1是  0否
+            materialSelectArray['files_state']=files_state;    //是否继承
             materialSelectArray['material']=findText;//材料类型 这里放进去的是材料类型的ID  板 槽  之类的
             materialSelectArray['layout_qty']=layout_qty; //排料数量
             materialSelectArray['material_requirements']=material_requirements;//材料要求
